maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:29: error: ')' expected but '(' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List((Int,Int)) = {
                              ^ShortestPathMaze:29: error: '=' expected but ',' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List((Int,Int)) = {
                                       ^ShortestPathMaze:88: error: illegal start of simple expression
}
^